2010-05-24  Andreas Kupries  <andreask@activestate.com>

	* geometry.man: A bit more commands, bumped to version 1.1.2.
	* geometry.tcl:
	* pkgIndex.tcl:

2010-04-06  Andreas Kupries  <andreask@activestate.com>

	* geometry.tcl (findLineIntersection): Fixed numerical 
	* geometry.man: instability in the algorithm by replacing
	* geometry.test: it with Kevin's parametric code. Updated
	* pkgIndex.tcl: documentation, testsuite. Bumped to
	  version 1.1.1.

2010-04-05  Andreas Kupries  <andreask@activestate.com>

	* geometry.tcl: Extended API with a number of basic point
	* geometry.man: and vector operations (+, -, scale, ...).
	* geometry.test: Updated documentation, testsuite.
	* pkgIndex.tcl: Bumped to version 1.1.

2010-01-17  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* fuzzy.tcl: [Bug 2933130]. Fixed procedure tlt
	* fuzzy.test: [Bug 2933130]. Added test for this bug
	* pkgIndex.tcl: Version increased to 0.2.1

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	*

2009-12-04  Andreas Kupries  <andreask@activestate.com>

	* math.man: [Bug 1998628]. Accepted fix by Arjen Markus, with
	* math.tcl: modifications. Extended testsuite. Bumped version
	* math.test: to 1.2.5.
	* pkgIndex.tcl:

2009-11-17  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* statistics.tcl: Bumped version to 0.6.3
	* geometry.tcl: Solved bug #1623653 - corner case in pointInsidePolygon
        * geometry.test: Added two tests for the corner case
	* pkgIndex.tcl: Updated version numbers

2009-11-16  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* pdf_stat.tcl: Fix bug #2897419 - very small numbers with beta
	  distribution

2009-10-22  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* interpolate.tcl: Fix bug #2881739 in cubic interpolation

2009-09-28  Andreas Kupries  <andreask@activestate.com>

	* linalg.test: Switched the test setup back to 'regular' and also