@@ -1,3 +1,8 @@
+2010-08-22  Andreas Kupries  <andreask@activestate.com>
+	* linalg.tcl: Corrected bug #3036124 (shape of U matrix)
+	  - should probably include an extra command for
+	  truncated output of S and V
+
 2010-05-24  Andreas Kupries  <andreask@activestate.com>
 
 	* geometry.man: A bit more commands, bumped to version 1.1.2.
@@ -6,7 +11,7 @@
 
 2010-04-06  Andreas Kupries  <andreask@activestate.com>
 
-	* geometry.tcl (findLineIntersection): Fixed numerical 
+	* geometry.tcl (findLineIntersection): Fixed numerical
 	* geometry.man: instability in the algorithm by replacing
 	* geometry.test: it with Kevin's parametric code. Updated
 	* pkgIndex.tcl: documentation, testsuite. Bumped to
